# bayesian-prevalence

./: .gitignore  README.md
R/: bayesprev.R  bayesprevCalcs.R  bayesprev_example.R  example_csv.R
matlab/: bayesprev_bound.m  bayesprev_diff_between.m  bayesprev_diff_within.m  bayesprev_example.m  bayesprev_hpdi.m  bayesprev_logodds.m  bayesprev_map.m  bayesprev_plotposterior.m  bayesprev_posterior.m  currfig1seed.mat  example_csv.m  fig1_group_vs_ind.m
paper/: bayes_scale.mat  bayes_scale_between.mat  bayes_scale_within.mat  fig1_group_vs_ind.m  fig2_scaling.m  fig2_simEEG.m  fig3_diff_scaling.m  fig4_effectsize_examples.m  fig4_group_diffs.m  fig5_effectsize_examples.m  fig5seed.mat  fig6_effectsize_examples.m  fig6seed.mat  fig7_scaling.m  figsubjectalingment.mat  figsubjectprop.mat  generate_data.m  prev_curve_onesided.m  prevbayes_normal.mat  run_T_vs_N_bayes_contour.m  run_T_vs_N_ttest_power.m  run_bayesian_scaling.m  run_scaling_between.m  run_scaling_within.m  tpow.mat
python/: bayesprev.py  bayesprev_example.py  example_csv.py  example_data.csv
python/bayesprev/: bayesprev.py  pyproject.toml
