[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bayesprev"
authors = [{name = "Robin Ince", email = "robince@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = [
    "numpy",
    "scipy",
]

[project.urls]
Home = "https://github.com/robince/bayesian-prevalence"
